# bazel_rules_chisel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: ci.yml  lint.yml
chisel/: BUILD.bazel  defs.bzl  extensions.bzl
tests/smoke/: BUILD.bazel  EmitSimpleAdder.scala  SimpleAdder.scala  SimpleAdderTest.scala  dummy0.sv  dummy1.v  ignore.txt  verilog_concat_test.sh
tests/version_compat/: check_chisel_versions.sh
verilog/: BUILD.bazel  defs.bzl
